# rs-stt-processor

./: .gitignore  Cargo.toml  README.md  command  config.json  out.json
files/: command  config.json  ffmpeg  jq  python  whisper  yt-dlp  ytdl.conf
output/json/: 800.json
src/: aws.rs  constants.rs  fetchers.rs  ffmpeg.rs  files.rs  main.rs  state.rs  stt.rs  waveform.rs  youtube_dl.rs
