[package]
name = "rs-stt-processor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "rs-stt"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.68"
# audrey = "0.3.0"
coqui-stt = "1.0.2"
# dasp_interpolate = { version = "0.11.0", features = ["linear"] }
# dasp_signal = "0.11.0"
# error-chain = "0.12.4"
reqwest = "0.11.14"
tokio = { version = "1", features = ["full"] }
serde_json = "1.0"
serde = { version = "1.0.100", features = ["derive"] }
aws-config = "0.3.0"
aws-sdk-s3 = "0.3.0"
rayon = "1.6.1"
indicatif = "0.17.3"
walkdir = "2.3.2"
# url = "2.3.1"
clap = { version = "4.1.4", features = ["derive"] }
vosk = "0.2.0"
rodio = "0.16.0"
